--- a/ColorfulLinesPreferences/Resources/Cursor.plist
+++ b/ColorfulLinesPreferences/Resources/Cursor.plist
@@ -4,107 +4,104 @@
 <dict>
 	<key>items</key>
 	<array>
-
-        <dict>
-            <key>cell</key>
-            <string>PSGroupCell</string>
-            <key>label</key>
-            <string>Cursor</string>
-        </dict>
-        <dict>
-            <key>cell</key>
-            <string>PSSwitchCell</string>
-            <key>default</key>
-            <true/>
-            <key>key</key>
-            <string>caretColorEnabled</string>
-            <key>label</key>
-            <string>Custom Cursor Color</string>
-        </dict>
-        <dict>
-            <key>cell</key>
-            <string>PSSwitchCell</string>
-            <key>default</key>
-            <true/>
-            <key>key</key>
-            <string>caretColorFromIcon</string>
-            <key>label</key>
-            <string>Color From App Icon</string>
-        </dict>
-        <dict>
-            <key>cell</key>
-            <string>PSLinkCell</string>
-            <key>cellClass</key>
-            <string>SparkColourPickerCell</string>
-            <key>libsparkcolourpicker</key>
-            <dict>
-                <key>fallback</key>
-                <string>#0984ff:1.0</string>
-                <key>alpha</key>
-                <true/>
-            </dict>
-            <key>key</key>
-            <string>caretColor</string>
-            <key>label</key>
-            <string>Color</string>
-        </dict>
-        <dict>
-            <key>cell</key>
-            <string>PSSwitchCell</string>
-            <key>default</key>
-            <false/>
-            <key>key</key>
-            <string>caretHidden</string>
-            <key>label</key>
-            <string>Hide Cursor</string>
-        </dict>
-        
-        <dict>
-            <key>cell</key>
-            <string>PSGroupCell</string>
-            <key>label</key>
-            <string>Floating Cursor</string>
-        </dict>
-        <dict>
-            <key>cell</key>
-            <string>PSSwitchCell</string>
-            <key>default</key>
-            <true/>
-            <key>key</key>
-            <string>floatingCaretColorEnabled</string>
-            <key>label</key>
-            <string>Floating Cursor Color</string>
-        </dict>
-        <dict>
-            <key>cell</key>
-            <string>PSSwitchCell</string>
-            <key>default</key>
-            <true/>
-            <key>key</key>
-            <string>floatingCaretColorFromIcon</string>
-            <key>label</key>
-            <string>Color From App Icon</string>
-        </dict>
-        <dict>
-            <key>cell</key>
-            <string>PSLinkCell</string>
-            <key>cellClass</key>
-            <string>SparkColourPickerCell</string>
-            <key>libsparkcolourpicker</key>
-            <dict>
-                <key>fallback</key>
-                <string>#0984ff:1.0</string>
-                <key>alpha</key>
-                <true/>
-            </dict>
-            <key>key</key>
-            <string>floatingCaretColor</string>
-            <key>label</key>
-            <string>Color</string>
-        </dict>
-
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Cursor</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>key</key>
+			<string>cursorColorEnabled</string>
+			<key>label</key>
+			<string>Custom Cursor Color</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>key</key>
+			<string>cursorColorFromIcon</string>
+			<key>label</key>
+			<string>Color From App Icon</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>SparkColourPickerCell</string>
+			<key>libsparkcolourpicker</key>
+			<dict>
+				<key>fallback</key>
+				<string>#0984ff:1.0</string>
+				<key>alpha</key>
+				<true/>
+			</dict>
+			<key>key</key>
+			<string>cursorColor</string>
+			<key>label</key>
+			<string>Color</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>key</key>
+			<string>cursorHidden</string>
+			<key>label</key>
+			<string>Hide Cursor</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Floating Cursor</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>key</key>
+			<string>floatingCursorColorEnabled</string>
+			<key>label</key>
+			<string>Floating Cursor Color</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>key</key>
+			<string>floatingCursorColorFromIcon</string>
+			<key>label</key>
+			<string>Color From App Icon</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>SparkColourPickerCell</string>
+			<key>libsparkcolourpicker</key>
+			<dict>
+				<key>fallback</key>
+				<string>#0984ff:1.0</string>
+				<key>alpha</key>
+				<true/>
+			</dict>
+			<key>key</key>
+			<string>floatingCursorColor</string>
+			<key>label</key>
+			<string>Color</string>
+		</dict>
 	</array>
 	<key>title</key>
-	<string>ColorfulLines</string>
+	<string>Cursor</string>
 </dict>
 </plist>
