--- a/ColorfulLinesPreferences/Makefile
+++ b/ColorfulLinesPreferences/Makefile
@@ -1,7 +1,6 @@
 ARCHS = arm64 arm64e
 
-TARGET := iphone:clang:13.7:13.0
-PREFIX = $(THEOS)/toolchain/Xcode.xctoolchain/usr/bin/
+TARGET := iphone:clang::14.0
 
 include $(THEOS)/makefiles/common.mk
 
@@ -10,6 +9,5 @@ BUNDLE_NAME = ColorfulLinesPreferences
 ColorfulLinesPreferences_FILES = $(shell find Sources/ColorfulLinesPreferences -name "*.swift")
 ColorfulLinesPreferences_INSTALL_PATH = /Library/PreferenceBundles
 ColorfulLinesPreferences_CFLAGS = -fobjc-arc
-#ColorfulLinesPreferences_FRAMEWORKS = NomaePreferences
 
 include $(THEOS_MAKE_PATH)/bundle.mk
